scaffold/typescript-go-main/testdata/baselines/reference/submodule/conformance/typedefTagWrapping.errors.txt
mod1.js(2,14): error TS2552: Cannot find name 'function'. Did you mean 'Function'?
mod1.js(2,22): error TS2300: Duplicate identifier '(Missing)'.
mod1.js(2,22): error TS1005: '}' expected.
mod1.js(9,12): error TS2552: Cannot find name 'Type1'. Did you mean 'Type2'?
mod3.js(4,14): error TS2552: Cannot find name 'function'. Did you mean 'Function'?
mod3.js(4,22): error TS2300: Duplicate identifier '(Missing)'.
mod3.js(4,22): error TS1005: '}' expected.
mod3.js(10,12): error TS2304: Cannot find name 'StringOrNumber1'.
mod4.js(4,14): error TS2552: Cannot find name 'function'. Did you mean 'Function'?
mod4.js(4,22): error TS2300: Duplicate identifier '(Missing)'.
mod4.js(4,22): error TS1005: '}' expected.
mod4.js(11,12): error TS2304: Cannot find name 'StringOrNumber2'.
mod7.js(5,7): error TS1110: Type expected.
mod7.js(8,4): error TS1110: Type expected.


==== mod1.js (4 errors) ====
    /** 
     * @typedef {function(string): boolean}
                 ~~~~~~~~
!!! error TS2552: Cannot find name 'function'. Did you mean 'Function'?
!!! related TS2728 lib.es5.d.ts:--:--: 'Function' is declared here.
                         
!!! error TS2300: Duplicate identifier '(Missing)'.
!!! related TS6203 mod3.js:4:22: '(Missing)' was also declared here.
!!! related TS6203 mod4.js:4:22: '(Missing)' was also declared here.
                         ~
!!! error TS1005: '}' expected.
     * Type1
     */
    
    /**
     * Tries to use a type whose name is on a different
     * line than the typedef tag.
     * @param {Type1} func The function to call.
               ~~~~~
!!! error TS2552: Cannot find name 'Type1'. Did you mean 'Type2'?
     * @param {string} arg The argument to call it with.
     * @returns {boolean} The return.
     */
    function callIt(func, arg) {
      return func(arg);
    }
    
==== mod2.js (0 errors) ====
    /** 
     * @typedef {{
     *   num: number,
     *   str: string,
     *   boo: boolean
     * }} Type2
     */
    
    /**
     * Makes use of a type with a multiline type expression.
     * @param {Type2} obj The object.
     * @returns {string|number} The return.
     */
    function check(obj) {
      return obj.boo ? obj.num : obj.str;
    }
    
==== mod3.js (4 errors) ====
    /**
     * A function whose signature is very long.
     *
     * @typedef {function(boolean, string, number):
                 ~~~~~~~~
!!! error TS2552: Cannot find name 'function'. Did you mean 'Function'?
!!! related TS2728 lib.es5.d.ts:--:--: 'Function' is declared here.
                         
!!! error TS2300: Duplicate identifier '(Missing)'.
!!! related TS6203 mod1.js:2:22: '(Missing)' was also declared here.
                         ~
!!! error TS1005: '}' expected.
     *     (string|number)} StringOrNumber1
     */
    
    /**
     * Makes use of a function type with a long signature.
     * @param {StringOrNumber1} func The function.
               ~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'StringOrNumber1'.
     * @param {boolean} bool The condition.
     * @param {string} str The string.
     * @param {number} num The number.
     * @returns {string|number} The return.
     */
    function use1(func, bool, str, num) {
      return func(bool, str, num)
    }
    
==== mod4.js (4 errors) ====
    /**
     * A function whose signature is very long.
     *
     * @typedef {function(boolean, string,
                 ~~~~~~~~
!!! error TS2552: Cannot find name 'function'. Did you mean 'Function'?
!!! related TS2728 lib.es5.d.ts:--:--: 'Function' is declared here.
                         
!!! error TS2300: Duplicate identifier '(Missing)'.
!!! related TS6203 mod1.js:2:22: '(Missing)' was also declared here.
                         ~
!!! error TS1005: '}' expected.
     *    number):
     *    (string|number)} StringOrNumber2
     */
    
    /**
     * Makes use of a function type with a long signature.
     * @param {StringOrNumber2} func The function.
               ~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'StringOrNumber2'.
     * @param {boolean} bool The condition.
     * @param {string} str The string.
     * @param {number} num The number.
     * @returns {string|number} The return.
     */
    function use2(func, bool, str, num) {
      return func(bool, str, num)
    }
    
==== mod5.js (0 errors) ====
    /** 
     * @typedef {{
     *   num:
     *   number,
     *   str:
     *   string,
     *   boo:
     *   boolean
     * }} Type5
     */
    
    /**
     * Makes use of a type with a multiline type expression.
     * @param {Type5} obj The object.
     * @returns {string|number} The return.
     */
    function check5(obj) {
      return obj.boo ? obj.num : obj.str;
    }
    
==== mod6.js (0 errors) ====
    /** 
     * @typedef {{
     *   foo:
     *   *,
     *   bar:
     *   *
     * }} Type6
     */
    
    /**
     * Makes use of a type with a multiline type expression.
     * @param {Type6} obj The object.
     * @returns {*} The return.
     */
    function check6(obj) {
      return obj.foo;
    }
    
    
==== mod7.js (2 errors) ====
    /** 
       Multiline type expressions in comments without leading * are not supported.
       @typedef {{
         foo:
         *,
          ~
!!! error TS1110: Type expected.
         bar:
         *
       }} Type7
       ~
!!! error TS1110: Type expected.
     */
    